--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -9,45 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
       "With GPU: False\n",
-      "^C\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/maovshao/Desktop/main/usa/USC/vhpredictor/VHPredictor/vhpredictor/embedding_generate.py\", line 79, in <module>\n",
-      "    esm_embedding_generate(args.esm_model_path, args.fasta, args.protein_embedding, args.nogpu, args.onehot)\n",
-      "  File \"/Users/maovshao/Desktop/main/usa/USC/vhpredictor/VHPredictor/vhpredictor/embedding_generate.py\", line 16, in esm_embedding_generate\n",
-      "    esm_model, alphabet = pretrained.load_model_and_alphabet(esm_model_path)\n",
-      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/maovshao/opt/anaconda3/envs/vhpredictor/lib/python3.12/site-packages/esm/pretrained.py\", line 26, in load_model_and_alphabet\n",
-      "    return load_model_and_alphabet_local(model_name)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/maovshao/opt/anaconda3/envs/vhpredictor/lib/python3.12/site-packages/esm/pretrained.py\", line 77, in load_model_and_alphabet_local\n",
-      "    return load_model_and_alphabet_core(model_name, model_data, regression_data)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/maovshao/opt/anaconda3/envs/vhpredictor/lib/python3.12/site-packages/esm/pretrained.py\", line 219, in load_model_and_alphabet_core\n",
-      "    model.load_state_dict(model_state, strict=regression_data is not None)\n",
-      "  File \"/Users/maovshao/opt/anaconda3/envs/vhpredictor/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 2139, in load_state_dict\n",
-      "    load(self, state_dict)\n",
-      "  File \"/Users/maovshao/opt/anaconda3/envs/vhpredictor/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 2127, in load\n",
-      "    load(child, child_state_dict, child_prefix)\n",
-      "  File \"/Users/maovshao/opt/anaconda3/envs/vhpredictor/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 2127, in load\n",
-      "    load(child, child_state_dict, child_prefix)\n",
-      "  File \"/Users/maovshao/opt/anaconda3/envs/vhpredictor/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 2127, in load\n",
-      "    load(child, child_state_dict, child_prefix)\n",
-      "  [Previous line repeated 1 more time]\n",
-      "  File \"/Users/maovshao/opt/anaconda3/envs/vhpredictor/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 2121, in load\n",
-      "    module._load_from_state_dict(\n",
-      "  File \"/Users/maovshao/opt/anaconda3/envs/vhpredictor/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 2040, in _load_from_state_dict\n",
-      "    param.copy_(input_param)\n",
-      "KeyboardInterrupt\n"
+      "/home1/wliu4877/.conda/envs/vhpredictor/lib/python3.12/site-packages/esm/pretrained.py:70: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  model_data = torch.load(str(model_location), map_location=\"cpu\")\n",
+      "/home1/wliu4877/.conda/envs/vhpredictor/lib/python3.12/site-packages/esm/pretrained.py:74: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  regression_data = torch.load(regression_location, map_location=\"cpu\")\n",
+      "Read example/virus_protein.fasta with 3 sequences\n",
+      "Processing 1 of 1 batches (3 sequences)\n",
+      "Get embedding from layer 33\n",
+      "\u001b[32m[I 250118 20:09:39 embedding_generate:82]\u001b[39m Bad message (TypeError('not all arguments converted during string formatting')): {'name': 'logzero_default', 'msg': 'Protein embedding generation time cost:', 'args': (81.1857750415802, 's'), 'levelname': 'INFO', 'levelno': 20, 'pathname': '/project/qcb_640/weiliu/VHPredictor/vhpredictor/embedding_generate.py', 'filename': 'embedding_generate.py', 'module': 'embedding_generate', 'exc_info': None, 'exc_text': None, 'stack_info': None, 'lineno': 82, 'funcName': '<module>', 'created': 1737259779.85457, 'msecs': 854.0, 'relativeCreated': 83365.24868011475, 'thread': 140051490891584, 'threadName': 'MainThread', 'processName': 'MainProcess', 'process': 280179, 'taskName': None}\n",
+      "\u001b[32m[I 250118 20:09:39 util:151]\u001b[39m Embeddings Loaded from example/embedding/virusprotein_embedding.pkl.\n",
+      "\u001b[32m[I 250118 20:09:39 embedding_generate:112]\u001b[39m Computed mean embeddings for 1 viruses.\n",
+      "\u001b[32m[I 250118 20:09:39 embedding_generate:119]\u001b[39m Total number of virus proteins originally: 3\n",
+      "\u001b[32m[I 250118 20:09:39 embedding_generate:120]\u001b[39m Total number of virus proteins collected: 3\n",
+      "\u001b[32m[I 250118 20:09:39 embedding_generate:121]\u001b[39m Total number of viruses with computed embeddings: 1\n"
      ]
     }
    ],
@@ -76,19 +58,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m[I 250106 11:14:16 vhpredictor_label_test:352]\u001b[39m # Testing VHPredictor: model_path=vhpredictor_data/model/vhpredictor/vhpredictor_virus_central, model_type=Virus-Central, output_path=example/result/, top=10\n",
-      "\u001b[32m[I 250106 11:14:16 vhpredictor_label_test:120]\u001b[39m # Starting prediction for VHPredictor model in vhpredictor_data/model/vhpredictor/vhpredictor_virus_central\n",
-      "\u001b[32m[I 250106 11:14:16 vhpredictor_label_test:124]\u001b[39m Model Type = Virus-Central\n",
-      "\u001b[32m[I 250106 11:14:16 util:150]\u001b[39m Embeddings Loaded from example/embedding/virus_embedding.pkl.\n",
+      "\u001b[32m[I 250118 20:09:45 vhpredictor_label_test:352]\u001b[39m # Testing VHPredictor: model_path=vhpredictor_data/model/vhpredictor/vhpredictor_virus_central, model_type=Virus-Central, output_path=example/result/, top=10\n",
+      "\u001b[32m[I 250118 20:09:45 vhpredictor_label_test:120]\u001b[39m # Starting prediction for VHPredictor model in vhpredictor_data/model/vhpredictor/vhpredictor_virus_central\n",
+      "\u001b[32m[I 250118 20:09:45 vhpredictor_label_test:124]\u001b[39m Model Type = Virus-Central\n",
+      "\u001b[32m[I 250118 20:09:45 util:151]\u001b[39m Embeddings Loaded from example/embedding/virus_embedding.pkl.\n",
       "Label index successfully loaded from vhpredictor_data/vhdb/host_label_index\n",
-      "\u001b[32m[I 250106 11:14:16 vhpredictor_label_test:131]\u001b[39m # Total label size: 4705\n",
-      "\u001b[32m[I 250106 11:14:16 vhpredictor_label_test:148]\u001b[39m Using CPU for prediction\n",
+      "\u001b[32m[I 250118 20:09:45 vhpredictor_label_test:131]\u001b[39m # Total label size: 4705\n",
+      "\u001b[32m[I 250118 20:09:45 vhpredictor_label_test:148]\u001b[39m Using CPU for prediction\n",
       "/project/qcb_640/weiliu/VHPredictor/./vhpredictor/vhpredictor_label_test.py:30: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  model.load_state_dict(torch.load(model_path, map_location=device))\n",
-      "\u001b[32m[I 250106 11:14:16 vhpredictor_label_test:33]\u001b[39m PyTorch model loaded successfully.\n",
-      "\u001b[32m[I 250106 11:14:16 vhpredictor_label_test:289]\u001b[39m Virus-level predicted labels saved to example/result/vhpredictor_virus_central_virus_label\n",
-      "\u001b[32m[I 250106 11:14:16 vhpredictor_label_test:305]\u001b[39m Virus-level predicted probabilities saved to example/result/vhpredictor_virus_central_virus_probability\n",
-      "\u001b[32m[I 250106 11:14:16 vhpredictor_label_test:311]\u001b[39m Virusprotein MLP embeddings saved to example/result/vhpredictor_virus_central_virusprotein_label_embedding.pkl\n"
+      "\u001b[32m[I 250118 20:09:45 vhpredictor_label_test:33]\u001b[39m PyTorch model loaded successfully.\n",
+      "\u001b[32m[I 250118 20:09:45 vhpredictor_label_test:289]\u001b[39m Virus-level predicted labels saved to example/result/vhpredictor_virus_central_virus_label\n",
+      "\u001b[32m[I 250118 20:09:45 vhpredictor_label_test:305]\u001b[39m Virus-level predicted probabilities saved to example/result/vhpredictor_virus_central_virus_probability\n",
+      "\u001b[32m[I 250118 20:09:45 vhpredictor_label_test:311]\u001b[39m Virusprotein MLP embeddings saved to example/result/vhpredictor_virus_central_virusprotein_label_embedding.pkl\n"
      ]
     }
    ],
@@ -110,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,15 +149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
       "Highest probability rows for each virus_name:\n",
       "                                       virus_name     host_name  probability\n",
       "0  Norovirus Hu/GII.4/Hong Kong/CUHK6080/2012/CHN  Homo sapiens       0.9929\n",
@@ -198,7 +178,7 @@
        "  <rdf:RDF xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:cc=\"http://creativecommons.org/ns#\" xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\n",
        "   <cc:Work>\n",
        "    <dc:type rdf:resource=\"http://purl.org/dc/dcmitype/StillImage\"/>\n",
-       "    <dc:date>2025-01-11T13:53:19.006961</dc:date>\n",
+       "    <dc:date>2025-01-18T20:09:51.726923</dc:date>\n",
        "    <dc:format>image/svg+xml</dc:format>\n",
        "    <dc:creator>\n",
        "     <cc:Agent>\n",
@@ -232,7 +212,7 @@
        "L 14.6844 80.64 \n",
        "Q 14.6844 87.984 17.892 87.984 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"fill: #f5f5f5; stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"fill: #f5f5f5; stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_3\">\n",
        "    <path d=\"M 172.926 87.984 \n",
@@ -245,7 +225,7 @@
        "L 169.7184 80.64 \n",
        "Q 169.7184 87.984 172.926 87.984 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"fill: #fbb4ae; stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"fill: #fbb4ae; stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_4\">\n",
        "    <path d=\"M 320.4756 87.984 \n",
@@ -258,7 +238,7 @@
        "L 317.268 80.64 \n",
        "Q 317.268 87.984 320.4756 87.984 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"fill: #b3cde3; stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"fill: #b3cde3; stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_5\">\n",
        "    <path d=\"M 320.4756 70.848 \n",
@@ -269,7 +249,7 @@
        "L 314.0604 70.83576 \n",
        "L 314.0604 68.4 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_6\">\n",
        "    <path d=\"M 393.1812 87.984 \n",
@@ -282,7 +262,7 @@
        "L 389.9736 80.64 \n",
        "Q 389.9736 87.984 393.1812 87.984 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"fill: #decbe4; stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"fill: #decbe4; stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_7\">\n",
        "    <path d=\"M 393.1812 70.848 \n",
@@ -293,7 +273,7 @@
        "L 386.766 70.83576 \n",
        "L 386.766 68.4 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_8\">\n",
        "    <path d=\"M 508.6548 87.984 \n",
@@ -306,7 +286,7 @@
        "L 505.4472 80.64 \n",
        "Q 505.4472 87.984 508.6548 87.984 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"fill: #fed9a6; stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"fill: #fed9a6; stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_9\">\n",
        "    <path d=\"M 508.6548 70.848 \n",
@@ -317,7 +297,7 @@
        "L 502.2396 70.83576 \n",
        "L 502.2396 68.4 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_10\">\n",
        "    <path d=\"M 613.4364 87.984 \n",
@@ -330,7 +310,7 @@
        "L 610.2288 80.64 \n",
        "Q 610.2288 87.984 613.4364 87.984 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"fill: #e5d8bd; stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"fill: #e5d8bd; stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_11\">\n",
        "    <path d=\"M 613.4364 70.848 \n",
@@ -341,7 +321,7 @@
        "L 607.0212 70.83576 \n",
        "L 607.0212 68.4 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_12\">\n",
        "    <path d=\"M 718.218 87.984 \n",
@@ -354,7 +334,7 @@
        "L 715.0104 80.64 \n",
        "Q 715.0104 87.984 718.218 87.984 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"fill: #fddaec; stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"fill: #fddaec; stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_13\">\n",
        "    <path d=\"M 718.218 70.848 \n",
@@ -365,7 +345,7 @@
        "L 711.8028 70.83576 \n",
        "L 711.8028 68.4 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_14\">\n",
        "    <path d=\"M 822.9996 87.984 \n",
@@ -378,7 +358,7 @@
        "L 819.792 80.64 \n",
        "Q 819.792 87.984 822.9996 87.984 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"fill: #f2f2f2; stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"fill: #f2f2f2; stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_15\">\n",
        "    <path d=\"M 822.9996 70.848 \n",
@@ -389,7 +369,7 @@
        "L 816.5844 70.83576 \n",
        "L 816.5844 68.4 \n",
        "z\n",
-       "\" clip-path=\"url(#p13625e1299)\" style=\"stroke: #000000; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p44d6dc69f2)\" style=\"stroke: #000000; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"text_1\">\n",
        "    <!-- Host -->\n",
@@ -1542,7 +1522,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p13625e1299\">\n",
+       "  <clipPath id=\"p44d6dc69f2\">\n",
        "   <rect x=\"7.2\" y=\"7.2\" width=\"2138.4\" height=\"122.4\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -1588,7 +1568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
